--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "framer-motion": "^3.6.7",
     "gsap": "^3.6.0",
     "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.0.1",
+    "react-dom": "^16.8",
     "react-gsap": "^2.2.1",
+    "react-motion": "^0.5.2",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
     "react-with-gesture": "^4.0.8",
